--- a/index.html
+++ b/index.html
@@ -6,62 +6,62 @@
         <title>Media Gallery</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href="static/styles.css"> -->
+        <link rel="stylesheet" href="static/styles.css">
     </head>
     <body>
         <h1>Portfolio</h1>
 
-        <section>
-          <figure>
+        <section class="grid-container">
+          <figure class="grid-item column-gutter-half row-gutter-1">
             <img src="http://www.fillmurray.com/g/1000/1000" alt="">
             <figcaption>
               <h2>Bill Murray</h2>
               <p>2015-08-09</p>
             </figcaption>
           </figure>
-          <figure>
+          <figure class="grid-item column-gutter-half row-gutter-1">
             <img src="http://www.placecage.com/1000/1000" alt="">
             <figcaption>
               <h2>Nic Cage</h2>
               <p>2015-08-08</p>
             </figcaption>
           </figure>
-          <figure>
+          <figure class="grid-item column-gutter-half row-gutter-1">
             <img src="http://www.stevensegallery.com/1000/1000" alt="">
             <figcaption>
               <h2>Steven Segal</h2>
               <p>2015-08-07</p>
             </figcaption>
           </figure>
-          <figure>
+          <figure class="grid-item column-gutter-half row-gutter-1">
             <img src="http://www.nicenicejpg.com/1000/1000" alt="">
             <figcaption>
               <h2>Rober Van Winkle</h2>
               <p>2015-08-06</p>
             </figcaption>
           </figure>
-          <figure>
+          <figure class="grid-item column-gutter-half row-gutter-1">
             <img src="http://www.placebear.com/1000/1000" alt="">
             <figcaption>
               <h2>A Bear</h2>
               <p>2015-08-05</p>
             </figcaption>
           </figure>
-          <figure>
+          <figure class="grid-item column-gutter-half row-gutter-1">
             <img src="http://placekitten.com/1000/1000" alt="">
             <figcaption>
               <h2>A Kitten</h2>
               <p>2015-08-04</p>
             </figcaption>
           </figure>
-          <figure>
+          <figure class="grid-item column-gutter-half row-gutter-1">
             <img src="http://www.fillmurray.com/g/1000/1000" alt="">
             <figcaption>
               <h2>Bill Murray</h2>
               <p>2015-08-09</p>
             </figcaption>
           </figure>
-          <figure>
+          <figure class="grid-item column-gutter-half row-gutter-1">
             <img src="http://www.placecage.com/1000/1000" alt="">
             <figcaption>
               <h2>Nic Cage</h2>
