beginnings of theme

--- a/index.html
+++ b/index.html
@@ -8,67 +8,71 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="static/styles.css">
     </head>
-    <body>
-        <h1>Portfolio</h1>
+    <body class="background--lowlight">
+        <main>
+          <header class="column-gutter-half">
+            <h1>Portfolio</h1>
+          </header>
 
-        <section class="grid-container">
-          <figure class="grid-item column-gutter-half row-gutter-1">
-            <img src="http://www.fillmurray.com/g/1000/1000" alt="">
-            <figcaption>
-              <h2>Bill Murray</h2>
-              <p>2015-08-09</p>
-            </figcaption>
-          </figure>
-          <figure class="grid-item column-gutter-half row-gutter-1">
-            <img src="http://www.placecage.com/1000/1000" alt="">
-            <figcaption>
-              <h2>Nic Cage</h2>
-              <p>2015-08-08</p>
-            </figcaption>
-          </figure>
-          <figure class="grid-item column-gutter-half row-gutter-1">
-            <img src="http://www.stevensegallery.com/1000/1000" alt="">
-            <figcaption>
-              <h2>Steven Segal</h2>
-              <p>2015-08-07</p>
-            </figcaption>
-          </figure>
-          <figure class="grid-item column-gutter-half row-gutter-1">
-            <img src="http://www.nicenicejpg.com/1000/1000" alt="">
-            <figcaption>
-              <h2>Rober Van Winkle</h2>
-              <p>2015-08-06</p>
-            </figcaption>
-          </figure>
-          <figure class="grid-item column-gutter-half row-gutter-1">
-            <img src="http://www.placebear.com/1000/1000" alt="">
-            <figcaption>
-              <h2>A Bear</h2>
-              <p>2015-08-05</p>
-            </figcaption>
-          </figure>
-          <figure class="grid-item column-gutter-half row-gutter-1">
-            <img src="http://placekitten.com/1000/1000" alt="">
-            <figcaption>
-              <h2>A Kitten</h2>
-              <p>2015-08-04</p>
-            </figcaption>
-          </figure>
-          <figure class="grid-item column-gutter-half row-gutter-1">
-            <img src="http://www.fillmurray.com/g/1000/1000" alt="">
-            <figcaption>
-              <h2>Bill Murray</h2>
-              <p>2015-08-09</p>
-            </figcaption>
-          </figure>
-          <figure class="grid-item column-gutter-half row-gutter-1">
-            <img src="http://www.placecage.com/1000/1000" alt="">
-            <figcaption>
-              <h2>Nic Cage</h2>
-              <p>2015-08-08</p>
-            </figcaption>
-          </figure>
-        </section>
+          <div class="grid-container">
+            <figure class="grid-item column-gutter-half row-gutter-1">
+              <img class="galleryitem-image" src="http://www.fillmurray.com/g/1000/1000" alt="">
+              <figcaption class="galleryitem-caption">
+                <h2>Bill Murray</h2>
+                <p>2015-08-09</p>
+              </figcaption>
+            </figure>
+            <figure class="grid-item column-gutter-half row-gutter-1">
+              <img class="galleryitem-image" src="http://www.placecage.com/1000/1000" alt="">
+              <figcaption class="galleryitem-caption">
+                <h2>Nic Cage</h2>
+                <p>2015-08-08</p>
+              </figcaption>
+            </figure>
+            <figure class="grid-item column-gutter-half row-gutter-1">
+              <img class="galleryitem-image" src="http://www.stevensegallery.com/1000/1000" alt="">
+              <figcaption class="galleryitem-caption">
+                <h2>Steven Segal</h2>
+                <p>2015-08-07</p>
+              </figcaption>
+            </figure>
+            <figure class="grid-item column-gutter-half row-gutter-1">
+              <img class="galleryitem-image" src="http://www.nicenicejpg.com/1000/1000" alt="">
+              <figcaption class="galleryitem-caption">
+                <h2>Robert Van Winkle</h2>
+                <p>2015-08-06</p>
+              </figcaption>
+            </figure>
+            <figure class="grid-item column-gutter-half row-gutter-1">
+              <img class="galleryitem-image" src="http://www.placebear.com/1000/1000" alt="">
+              <figcaption class="galleryitem-caption">
+                <h2>A Bear</h2>
+                <p>2015-08-05</p>
+              </figcaption>
+            </figure>
+            <figure class="grid-item column-gutter-half row-gutter-1">
+              <img class="galleryitem-image" src="http://placekitten.com/1000/1000" alt="">
+              <figcaption class="galleryitem-caption">
+                <h2>A Kitten</h2>
+                <p>2015-08-04</p>
+              </figcaption>
+            </figure>
+            <figure class="grid-item column-gutter-half row-gutter-1">
+              <img class="galleryitem-image" src="http://www.fillmurray.com/g/1000/1000" alt="">
+              <figcaption class="galleryitem-caption">
+                <h2>Bill Murray</h2>
+                <p>2015-08-09</p>
+              </figcaption>
+            </figure>
+            <figure class="grid-item column-gutter-half row-gutter-1">
+              <img class="galleryitem-image" src="http://www.placecage.com/1000/1000" alt="">
+              <figcaption class="galleryitem-caption">
+                <h2>Nic Cage</h2>
+                <p>2015-08-08</p>
+              </figcaption>
+            </figure>
+          </div>
+        </main>
         <!-- <script src="js/main.js"></script> -->
     </body>
 </html>
