--- a/index.html
+++ b/index.html
@@ -10,65 +10,65 @@
     </head>
     <body class="background--lowlight">
         <main>
-          <header class="column-gutter-half">
-            <h1>Portfolio</h1>
+          <header class="column-gutter-half row-gutter-1">
+            <h1 class="text--highlight h1">Portfolio</h1>
           </header>
 
           <div class="grid-container">
             <figure class="grid-item column-gutter-half row-gutter-1">
               <img class="galleryitem-image" src="http://www.fillmurray.com/g/1000/1000" alt="">
               <figcaption class="galleryitem-caption">
-                <h2>Bill Murray</h2>
-                <p>2015-08-09</p>
+                <h2 class="h2">Bill Murray</h2>
+                <p class="h3">2015-08-09</p>
               </figcaption>
             </figure>
             <figure class="grid-item column-gutter-half row-gutter-1">
               <img class="galleryitem-image" src="http://www.placecage.com/1000/1000" alt="">
               <figcaption class="galleryitem-caption">
-                <h2>Nic Cage</h2>
-                <p>2015-08-08</p>
+                <h2 class="h2">Nic Cage</h2>
+                <p class="h3">2015-08-08</p>
               </figcaption>
             </figure>
             <figure class="grid-item column-gutter-half row-gutter-1">
               <img class="galleryitem-image" src="http://www.stevensegallery.com/1000/1000" alt="">
               <figcaption class="galleryitem-caption">
-                <h2>Steven Segal</h2>
-                <p>2015-08-07</p>
+                <h2 class="h2">Steven Segal</h2>
+                <p class="h3">2015-08-07</p>
               </figcaption>
             </figure>
             <figure class="grid-item column-gutter-half row-gutter-1">
               <img class="galleryitem-image" src="http://www.nicenicejpg.com/1000/1000" alt="">
               <figcaption class="galleryitem-caption">
-                <h2>Robert Van Winkle</h2>
-                <p>2015-08-06</p>
+                <h2 class="h2">Robert Van Winkle</h2>
+                <p class="h3">2015-08-06</p>
               </figcaption>
             </figure>
             <figure class="grid-item column-gutter-half row-gutter-1">
               <img class="galleryitem-image" src="http://www.placebear.com/1000/1000" alt="">
               <figcaption class="galleryitem-caption">
-                <h2>A Bear</h2>
-                <p>2015-08-05</p>
+                <h2 class="h2">A Bear</h2>
+                <p class="h3">2015-08-05</p>
               </figcaption>
             </figure>
             <figure class="grid-item column-gutter-half row-gutter-1">
               <img class="galleryitem-image" src="http://placekitten.com/1000/1000" alt="">
               <figcaption class="galleryitem-caption">
-                <h2>A Kitten</h2>
-                <p>2015-08-04</p>
+                <h2 class="h2">A Kitten</h2>
+                <p class="h3">2015-08-04</p>
               </figcaption>
             </figure>
             <figure class="grid-item column-gutter-half row-gutter-1">
               <img class="galleryitem-image" src="http://www.fillmurray.com/g/1000/1000" alt="">
               <figcaption class="galleryitem-caption">
-                <h2>Bill Murray</h2>
-                <p>2015-08-09</p>
+                <h2 class="h2">Bill Murray</h2>
+                <p class="h3">2015-08-09</p>
               </figcaption>
             </figure>
             <figure class="grid-item column-gutter-half row-gutter-1">
               <img class="galleryitem-image" src="http://www.placecage.com/1000/1000" alt="">
               <figcaption class="galleryitem-caption">
-                <h2>Nic Cage</h2>
-                <p>2015-08-08</p>
+                <h2 class="h2">Nic Cage</h2>
+                <p class="h3">2015-08-08</p>
               </figcaption>
             </figure>
           </div>
