--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             </figure>
           </div>
         </main>
-        <!-- <script src="js/main.js"></script> -->
+        <script src="/node_modules/angular/angular.js"></script>
+        <script src="/static/scripts.js"></script>
     </body>
 </html>
