--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Media Gallery</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="static/styles.css">
+        <link rel="stylesheet" href="./static/styles.css">
     </head>
     <body class="background--lowlight">
         <main>
@@ -73,7 +73,7 @@
             </figure>
           </div>
         </main>
-        <script src="/node_modules/angular/angular.js"></script>
-        <script src="/static/scripts.js"></script>
+        <script src="./node_modules/angular/angular.js"></script>
+        <script src="./static/scripts.js"></script>
     </body>
 </html>
